testsuite/poke.pkl/index-diag-1.pk
/* { dg-do compile } */

23[2]; /* { dg-error "invalid operator.*\n.*expected array or string" } */
